# apkb

./: .gitignore  Makefile  README.md  deno.json
.github/workflows/: ci.yml
apk/: settings.gradle.kts
apk/app/: build.gradle.kts
apk/app/src/androidTest/java/io/github/fm_elpac/apkb/: ExampleInstrumentedTest.kt
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/java/io/github/fm_elpac/apkb/: ApkbApi.kt  ApkbApp.kt  MainActivity.kt
apk/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
apk/app/src/main/res/values-zh/: strings.xml
apk/gradle/: libs.versions.toml
apk/setup/: azi_init.sh  upgrade.sh
atool/: Cargo.toml  README.md
atool/src/: adb.rs  apk.rs  cli.rs  hash.rs  http.rs  main.rs  sign_info.rs
ui-vue/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
ui-vue/src/: App.vue  main.js  v.js
ui-vue/src/api/: apkb_api.js
ui-vue/src/api/config/: index.js
ui-vue/src/c/: AppList.vue  AppListItem.vue  ListEmpty.vue  LoadingTop.vue  PageBox.vue  TotalApp.vue  _empty.vue
ui-vue/src/c/layout/: Layout1.vue  LayoutR1.vue  Sidebar.vue
ui-vue/src/hook/: lang.js
ui-vue/src/i18n/: index.js
ui-vue/src/i18n/en/: c.js  host.js  index.js  title.js
ui-vue/src/i18n/zh/: c.js  host.js  index.js  title.js
ui-vue/src/router/: index.js
ui-vue/src/stores/: app.js  counter.js  lang.js  share.js
ui-vue/src/views/about/: En.vue  Zh.vue  index.vue
ui-vue/src/views/app/: index.vue
ui-vue/src/views/backup/: index.vue
ui-vue/src/views/home/: index.vue
ui-vue/src/views/host/: index.vue
ui-vue/src/views/setting/: index.vue
ui-vue/src/views/share/: index.vue
ui-vue/src/views/welcome/: En.vue  Zh.vue  index.vue
ui-vue/src/vuetify/: index.js
(+5 files in other folders)
